fixed: z-index

--- a/components/main/reviews/styles.module.scss
+++ b/components/main/reviews/styles.module.scss
@@ -2,6 +2,7 @@
 
 .reviews {
 	&__container {
+		z-index: 1000000;
 		position: relative;
 		display: flex;
 		flex-direction: row;
